audience/k8/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/plugins: go-jwt-aud2
    konghq.com/strip-path: "true"
  name: go-rest-api-my-custom-plugin2
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: go-rest-api
            port:
              number: 80
        path: /go-rest-api-my-custom-plugin2
        pathType: Prefix
